--- a/templates/index.html
+++ b/templates/index.html
@@ -84,9 +84,9 @@
                         
                             <div class="collapse navbar-collapse m-0 pb-0 navbar-brand" id="navbarNav">
                                 <ul class="navbar-nav bg-warning  justify-content-center col-12" >
-                                    <li class="nav-item"><a href="./upload.html" class="nav-link " style="color:black ;">目擊目擊回報</a></li>
-                                    <li class="nav-item"><a href="./identification.html" class="nav-link" style="color:black ;">物種鑑定</a></li>
-                                    <li class="nav-item"><a href="./identification_test.html" class="nav-link" style="color:black ;">物種鑑定測驗</a></li>
+                                    <li class="nav-item"><a href="./upload.html" class="nav-link be_disable" disabled style="color:black ;">目擊目擊回報</a></li>
+                                    <li class="nav-item"><a href="./identification.html" class="nav-link be_disable" disabled  style="color:black ;">物種鑑定</a></li>
+                                    <li class="nav-item"><a href="./identification_test.html" class="nav-link be_disable" disabled  style="color:black ;">物種鑑定測驗</a></li>
                                     <li class="nav-item"><a href="./ambulance.html" class="nav-link" style="color:black ;">救傷通報</a></li>
 
                                     <li class="nav-item"><a href="./data.html" class="nav-link" style="color:black ;">資料查詢</a></li>
@@ -178,6 +178,7 @@
       if(sessionStorage.getItem('login_account')!=null){
         $('.unlogging').prop('hidden',true)
         $('.logging').prop('hidden',false)
+        $('.be_disable').prop('disabled',false)
       }
 
       $('#go_sign_in').on('click' ,async function(){
