--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
                 <a href="" hidden class="logging btn btn-dark  ms-3  align-self-center text-nowrap" style="height: 35px; width:70px" >關於我</a>
 
                 <button  class="unlogging btn btn-dark  ms-3  align-self-center text-nowrap" style="height: 35px; width:70px" data-bs-toggle="modal" data-bs-target="#exampleModal">登入</button>
-                <a href="./sign_up.html" class="unlogging btn btn-dark ms-2 align-self-center text-nowrap" style="height: 35px; width:70px">註冊</a>
+                <a href="/sign_up" id="sign_up" class="unlogging btn btn-dark ms-2 align-self-center text-nowrap" style="height: 35px; width:70px">註冊</a>
                 <button style="height: 35px;width: 35px;" class="navbar-toggler ms-3 ms-md-5  align-self-center d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                   <span ><img src="/static/img/list_grey.svg" style="height: 35px;width: 35px;"></span>
                 </button>
@@ -167,7 +167,7 @@
     crossorigin="anonymous"></script>
     
     
-    <script>
+    <script> //通用
       $(document).ready(function(){
         $('.wait').removeClass('wait')
         
@@ -208,7 +208,7 @@
         )
       })
 
-     
+      
 
       $('#go_log_out').on('click',function(){
         // sessionStorage.setItem('login_account',null);
