--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     <input name="key_password" id="password" name= type="text">
                 </div>
                 <div class="modal-footer">
-                  <a  href="./forget_password.html" type="button" class="btn btn-secondary" >忘記密碼</a>
+                  <a  href="/forget_password" type="button" class="btn btn-secondary" >忘記密碼</a>
                   <button type="button" class="btn btn-warning" id="go_sign_in">確定</button>
                 </div>
               </div>
@@ -55,7 +55,7 @@
           
             <div class="d-flex justify-content-center col-12">
                 <div>
-                    <a href="./index.html" class="text-decoration-none text-light text-center">
+                    <a href="/" class="text-decoration-none text-light text-center">
                         <span class="h1 d-block ">陸域野生動物目擊回報</span>
                         
                     </a>
@@ -84,6 +84,7 @@
                         
                             <div class="collapse navbar-collapse m-0 pb-0 navbar-brand" id="navbarNav">
                                 <ul class="navbar-nav bg-warning  justify-content-center col-12" >
+                                  <li class="nav-item"><a href="/" class="nav-link be_disable" disabled style="color:black ;">首頁</a></li>
                                     <li class="nav-item"><a href="./upload.html" class="nav-link be_disable" disabled style="color:black ;">目擊目擊回報</a></li>
                                     <li class="nav-item"><a href="./identification.html" class="nav-link be_disable" disabled  style="color:black ;">物種鑑定</a></li>
                                     <li class="nav-item"><a href="./identification_test.html" class="nav-link be_disable" disabled  style="color:black ;">物種鑑定測驗</a></li>
