--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+   
 
     <style>
+      
         body{
             background-color: antiquewhite;
             display: flex
+        }
+        .wait{
+          display: none;
         }
         .fixed-top>div {
             display: inline-block;
@@ -18,83 +25,231 @@
         #navbarNav>ul>li:hover{
             background-color: rgb(212, 186, 16);
         }
+        
     </style>
 </head>
+
 <body>
-    <div  class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">登入</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <label for="key_acount">帳號:</label>
-                <input name="key_acount" type="text"><br><br>
-                <label for="key_password">密碼:</label>
-                <input name="key_password" type="text">
-            </div>
-            <div class="modal-footer">
-              <a  href="./forget_password.html" type="button" class="btn btn-secondary" >忘記密碼</a>
-              <button type="button" class="btn btn-warning">確定</button>
+    <div class="container-fluid px-0 wait" >
+        <div  class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="sign_in">登入</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <label for="key_acount">帳號:</label>
+                    <input name="key_acount" id='account' type="text" name="ac"><br><br>
+                    <label for="key_password" >密碼:</label>
+                    <input name="key_password" id="password" name= type="text">
+                </div>
+                <div class="modal-footer">
+                  <a  href="/forget_password" type="button" class="btn btn-secondary" >忘記密碼</a>
+                  <button type="button" class="btn btn-warning" id="go_sign_in">確定</button>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-    <div class=" row fixed-top" style="background-image:url(./image/header_bg.jpg) ;">
-        <div class="d-flex justify-content-center col-12">
-            <div>
-                <a href="./index.html" class="text-decoration-none text-light text-center">
-                    <span class="h1 d-block ">陸域野生動物目擊回報</span>
-                    
-                </a>
-
-            </div>
-            <div class="align-self-center ms-5">
-                <input type="text"  placeholder="搜尋" class="form-control">
-
-            </div>
-            <button  class="btn btn-dark  ms-3  align-self-center text-nowrap" style="height: 35px; width:70px" data-bs-toggle="modal" data-bs-target="#exampleModal">登入</button>
-            <a href="./sign_up.html" class="btn btn-dark ms-2 align-self-center text-nowrap" style="height: 35px; width:70px">註冊</a>
-            <button style="height: 35px;width: 35px;" class="navbar-toggler ms-3 ms-md-5  align-self-center d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-              <span ><img src="./image/list_grey.svg " style="height: 35px;width: 35px;"></span>
-            </button>
-            
-        </div>
-        <div class="container">
-           
-            <nav class="navbar navbar-expand-lg navbar-dark pb-0">
-                <div class="container-fluid p-0">
-                    
-                    
-                    
-                        <div class="collapse navbar-collapse m-0 pb-0 navbar-brand" id="navbarNav">
-                            <ul class="navbar-nav bg-warning  justify-content-center col-12" >
-                                <li class="nav-item"><a href="./index.html" class="nav-link " style="color:black ;">首頁</a></li>
-
-                                <li class="nav-item"><a href="./upload.html" class="nav-link " style="color:black ;">目擊目擊回報</a></li>
-                                <li class="nav-item"><a href="./identification.html" class="nav-link" style="color:black ;">物種鑑定</a></li>
-                                <li class="nav-item"><a href="./identification_test.html" class="nav-link" style="color:black ;">物種鑑定測驗</a></li>
-                                <li class="nav-item"><a href="./ambulance.html" class="nav-link" style="color:black ;">救傷通報</a></li>
-
-                                <li class="nav-item"><a href="./data.html" class="nav-link" style="color:black ;">資料查詢</a></li>
-                                <li class="nav-item"><a href="./text.html" class="nav-link" style="color:black ;">訊息專區</a></li>
-                            </ul>
-                        </div>
+        <div class=" row fixed-top" style="background-image:url(/static/img/header_bg.jpg) ;">
+          
+            <div class="d-flex justify-content-center col-12">
+                <div>
+                    <a href="/" class="text-decoration-none text-light text-center">
+                        <span class="h1 d-block ">陸域野生動物目擊回報</span>
                         
+                    </a>
+    
                 </div>
+                <div class="align-self-center ms-5">
+                    <input type="text"  placeholder="搜尋" class="form-control">
+
+                </div>
+                <button hidden id="go_log_out" class="logging btn btn-dark  ms-3  align-self-center text-nowrap" style="height: 35px; width:70px"  >登出</button>
+                <a href="" hidden class="logging btn btn-dark  ms-3  align-self-center text-nowrap" style="height: 35px; width:70px" >關於我</a>
+
+                <button  class="unlogging btn btn-dark  ms-3  align-self-center text-nowrap" style="height: 35px; width:70px" data-bs-toggle="modal" data-bs-target="#exampleModal">登入</button>
+                <a href="/sign_up" id="sign_up" class="unlogging btn btn-dark ms-2 align-self-center text-nowrap" style="height: 35px; width:70px">註冊</a>
+                <button style="height: 35px;width: 35px;" class="navbar-toggler ms-3 ms-md-5  align-self-center d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                  <span ><img src="/static/img/list_grey.svg" style="height: 35px;width: 35px;"></span>
+                </button>
                 
-            </nav>
+            </div>
+            <div class="container">
+               
+                <nav class="navbar navbar-expand-lg navbar-dark pb-0">
+                    <div class="container-fluid p-0">
+                        
+                        
+                        
+                            <div class="collapse navbar-collapse m-0 pb-0 navbar-brand" id="navbarNav">
+                                <ul class="navbar-nav bg-warning  justify-content-center col-12" >
+                                  <li class="nav-item"><a href="/" class="nav-link be_disable" disabled style="color:black ;">首頁</a></li>
+                                    <li class="nav-item"><a href="./upload.html" class="nav-link be_disable" disabled style="color:black ;">目擊回報</a></li>
+                                    <li class="nav-item"><a href="./identification.html" class="nav-link be_disable" disabled  style="color:black ;">物種鑑定</a></li>
+                                    <li class="nav-item"><a href="./identification_test.html" class="nav-link be_disable" disabled  style="color:black ;">物種鑑定測驗</a></li>
+                                    <li class="nav-item"><a href="./ambulance.html" class="nav-link" style="color:black ;">救傷通報</a></li>
+
+                                    <li class="nav-item"><a href="./data.html" class="nav-link" style="color:black ;">資料查詢</a></li>
+                                    <li class="nav-item"><a href="./text.html" class="nav-link" style="color:black ;">訊息專區</a></li>
+                                </ul>
+                            </div>
+                            
+                    </div>
+                    
+                </nav>
+               
+            </div>
+           
            
         </div>
-       
-       
-    </div>
+
+        <div style="height: 150px;"></div>
+
+        <div class="d-flex justify-content-center">
+         <div  class="d-flex justify-content-center" style="width: 70% ; background-color: white;">
+            <div class="border border-warning border border-3 rounded my-4">
+                <form id="up_form" class="my-3 mx-3" >
+                    <h4>回報</h4>
+                    <div class="mb-3">
+                        <div class="input-group mb-3">
+                            <input name="file" type="file" class="form-control" id="photo">
+                            <label class="input-group-text" for="photo">上傳照片</label>
+                          </div>
+                          <div class="input-group mb-3">
+                            <label class="input-group-text">物種</label>
+                            <input id="sp_name" placeholder="請請輸入學名，可透過下方查詢學名查詢" type="text" class="form-control" >
+                            
+                        </div>
+                        <div class="input-group mb-3">
+                            <label class="input-group-text">時間</label>
+                            <input  type="datetime-local" id="time" class="form-control" >
+                            
+                        </div>
+                        <select class="form-select" id="location">
+                            <option selected>地點</option>
+                            <option value="台北市">台北市</option>
+                            <option value="新北市">新北市</option>
+                            <option value="桃園市">桃園市</option>
+                            <option value="新竹市">新竹市</option>
+                            <option value="新竹縣">新竹縣</option>
+                            <option value="苗栗縣">苗栗縣</option>
+                            <option value="台中市">台中市</option>
+                            <option value="南投縣">南投縣</option>
+                            <option value="彰化縣">彰化縣</option>
+                            <option value="雲林縣">雲林縣</option>
+                            <option value="嘉義縣">嘉義縣</option>
+                            <option value="台南市">台南市</option>
+                            <option value="高雄市">高雄市</option>
+                            <option value="屏東縣">屏東縣</option>
+                            <option value="宜蘭縣">宜蘭縣</option>
+                            <option value="花蓮縣">花蓮縣</option>
+                            <option value="台東縣">台東縣</option>
+                            <option value="澎湖縣">澎湖縣</option>
+                            <option value="連江縣">連江縣</option>
+                          </select>
+                        
+                        
+                    
+                    <a href="https://portal.taibif.tw/common-name-checker" target="_blank" class="btn btn-secondary">查詢學名</a>
+                  </form>
+                  
+            </div>
+            <button id="d_submit"  class="btn btn-primary">提交</button>
+         </div>
+
+        </div>
+
+        
+
+        
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
     integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
     integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
     crossorigin="anonymous"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.7.1.js"
+    integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    
+    <script> //通用
+      $(document).ready(function(){
+        $('.wait').removeClass('wait')
+        
+      })
+
+      
+
+      if(sessionStorage.getItem('login_account')!=null){
+        $('.unlogging').prop('hidden',true)
+        $('.logging').prop('hidden',false)
+        $('.be_disable').prop('disabled',false)
+      }
+
+      $('#go_sign_in').on('click' ,async function(){
+        let ac_input={
+           "account":$('#account').val(),
+           "password":$('#password').val()
+           };
+        let result=await $.ajax({
+          type:'post',
+          url:'/login',
+          data:ac_input,
+          success:function(info){
+            if (info=='ok'){
+              sessionStorage.setItem('login_account',ac_input.account);
+              location.reload();
+            } else if(data=='password_wrong'){
+              alert('密碼錯誤')
+            } else if(data=='account_wrong'){
+              alert('帳號錯誤')
+            } else{
+              alert('請重新整理')
+            }
+          }
+          
+        }
+          
+        )
+      })
+
+      
+
+      $('#go_log_out').on('click',function(){
+        // sessionStorage.setItem('login_account',null);
+        sessionStorage.clear();
+        location.reload();
+        
+      })
+    </script>
+    <script>
+        $('#d_submit').on('click', function(){
+            // console.log($('#photo')[0].files[0])
+            var form = new FormData()
+            form.append('file',$('#photo')[0].files[0])
+            form.append('sp_name',$('#sp_name').val())
+            form.append('time',$('#time').val())
+            form.append('location',$('#location').val())
+            let to_sever ={
+                "photo":$('#photo')[0].files
+                // 'sp_name':$('#sp_name').val(),
+                // 'time':$('#time').val(),
+                // 'location':$('#location').val()
+            }
+            
+            console.log(form.get('file'))
+            axios.post('/upload',form)
+            .then(function(info){
+              alert(info.data)
+            })
+            
+            })
+        // })
+    </script>
 </body>
+
 </html>
