--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>野生動物目擊回報</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
    
@@ -51,6 +51,27 @@
               </div>
             </div>
           </div>
+
+          <div  class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="sign_in">登入</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <label for="key_acount">帳號:</label>
+                    <input name="key_acount" id='account' type="text" name="ac"><br><br>
+                    <label for="key_password" >密碼:</label>
+                    <input name="key_password" id="password" name= type="text">
+                </div>
+                <div class="modal-footer">
+                  <a  href="/forget_password" type="button" class="btn btn-secondary" >忘記密碼</a>
+                  <button type="button" class="btn btn-warning" id="go_sign_in">確定</button>
+                </div>
+              </div>
+            </div>
+          </div>
         <div class=" row fixed-top" style="background-image:url(/static/img/header_bg.jpg) ;">
           
             <div class="d-flex justify-content-center col-12">
@@ -66,8 +87,8 @@
 
                 </div>
                 <button hidden id="go_log_out" class="logging btn btn-dark  ms-3  align-self-center text-nowrap" style="height: 35px; width:70px"  >登出</button>
-                <a href="" hidden class="logging btn btn-dark  ms-3  align-self-center text-nowrap" style="height: 35px; width:70px" >關於我</a>
-
+                <button id="about_me" hidden class="logging btn btn-dark  ms-3  align-self-center text-nowrap" style="height: 35px; width:70px" ></button>
+                
                 <button  class="unlogging btn btn-dark  ms-3  align-self-center text-nowrap" style="height: 35px; width:70px" data-bs-toggle="modal" data-bs-target="#exampleModal">登入</button>
                 <a href="/sign_up" id="sign_up" class="unlogging btn btn-dark ms-2 align-self-center text-nowrap" style="height: 35px; width:70px">註冊</a>
                 <button style="height: 35px;width: 35px;" class="navbar-toggler ms-3 ms-md-5  align-self-center d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,9 +105,9 @@
                         
                             <div class="collapse navbar-collapse m-0 pb-0 navbar-brand" id="navbarNav">
                                 <ul class="navbar-nav bg-warning  justify-content-center col-12" >
-                                  <li class="nav-item"><a href="/" class="nav-link be_disable" disabled style="color:black ;">首頁</a></li>
-                                    <li class="nav-item"><a href="/upload" class="nav-link be_disable" disabled style="color:black ;">目擊目擊回報</a></li>
-                                    <li class="nav-item"><a href="/identi" class="nav-link be_disable" disabled  style="color:black ;">物種鑑定</a></li>
+                                  <li class="nav-item"><a href="/" class="nav-link "  style="color:black ;">首頁</a></li>
+                                    <li class="nav-item"><a href="/upload" class="nav-link be_disable"  style="color:black ;">目擊目擊回報</a></li>
+                                    <li class="nav-item"><a href="/identi" class="nav-link be_disable"   style="color:black ;">物種鑑定</a></li>
                                     
                                     <li class="nav-item"><a href="/ambulance" class="nav-link" style="color:black ;">救傷通報</a></li>
 
@@ -155,7 +176,7 @@
           </div>
         </div>
     </div>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
     integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
     crossorigin="anonymous"></script>
@@ -179,7 +200,9 @@
       if(sessionStorage.getItem('login_account')!=null){
         $('.unlogging').prop('hidden',true)
         $('.logging').prop('hidden',false)
-        $('.be_disable').prop('disabled',false)
+        // $('.be_disable').prop('disabled',false)
+      } else{
+        $('.be_disable').prop('href','')
       }
 
       $('#go_sign_in').on('click' ,async function(){
@@ -209,7 +232,7 @@
         )
       })
 
-      
+      $('#about_me' ).text(sessionStorage.getItem('login_account'))
 
       $('#go_log_out').on('click',function(){
         // sessionStorage.setItem('login_account',null);
